[package]
name = "rust-playground"
version = "0.1.1"
authors = ["Brian Pfeil <brian.pfeil@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.25"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
serde_derive = "1.0"
